--- a/jade/header.jade
+++ b/jade/header.jade
@@ -7,7 +7,7 @@
 header.header
 	.container
 		img.logo.logo-header(src="img/logos/cooltech-h.png", alt="Логотип")
-		.search
+		form.search
 			input(type="search" placeholder="Что будем искать").search__text
 			input(type="submit" value="Найти").search__submit
 		ul.insite-links
