--- a/styles/_sections/_header.scss
+++ b/styles/_sections/_header.scss
@@ -7,13 +7,13 @@
 }
 .search{
 	float: left;
-	margin-right: 50px;
 	margin-left: 56px;
 }
 
 .insite-links{
 	float: left;
 	padding-top: 8px;
+	margin-left: 50px;
 }
 
 .insite-links__a{
